--- a/record_digit_data.ipynb
+++ b/record_digit_data.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "04918e69",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "47a93e74",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "68bced29",
    "metadata": {
     "scrolled": true
@@ -195,16 +195,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved 0\n"
+      "Saved 0\n",
+      "Saved 1\n",
+      "Saved 2\n",
+      "Saved 3\n",
+      "Saved 4\n",
+      "Saved 5\n",
+      "Saved 6\n",
+      "Saved 7\n",
+      "Saved 8\n",
+      "Saved 9\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<__main__.App at 0x1fe63adce80>"
+       "<__main__.App at 0x1b3bbf2a6c0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +247,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
