--- a/show_digit_data.ipynb
+++ b/show_digit_data.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "68bced29",
    "metadata": {
     "scrolled": true
@@ -110,10 +110,10 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.App at 0x26b66bb1580>"
+       "<__main__.App at 0x1ffb49de1b0>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
