Finished another part

--- a/knn_digits starter solution.ipynb
+++ b/knn_digits starter solution.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "ef952560",
    "metadata": {},
    "outputs": [],
@@ -34,9 +34,14 @@
     "\n",
     "    # Calculate the distance from this point to the other point.\n",
     "    def distance(self, other):\n",
+    "        sum = 0\n",
+    "        for i in range(len(self.properties)):\n",
+    "            diff = self.properties[i] - other.properties[i]\n",
+    "            sum += diff **2\n",
     "        \n",
-    "        distance = sum([ (x1-x2)**2 for x1 in self.properties for x2 in other.properties])\n",
-    "        return math.sqrt(distance)\n",
+    "        \n",
+    "        \n",
+    "        return math.sqrt(sum)\n",
     "\n",
     "\n",
     "    # Use K nearest neighbors to set the data point's name.\n",
@@ -64,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "47a93e74",
    "metadata": {},
    "outputs": [],
@@ -158,6 +163,7 @@
     "            success_rate = self.test_data(k)\n",
     "\n",
     "            if success_rate > best_rate:\n",
+    "                self.k = k\n",
     "                best_rate = success_rate\n",
     "        \n",
     "        return best_rate\n",
@@ -170,9 +176,8 @@
     "        for dp in self.data_points:\n",
     "            name = dp.name\n",
     "            dp.knn(self.data_points, k)\n",
-    "            new_name = dp.name\n",
     "\n",
-    "            if new_name == name:\n",
+    "            if dp.name == name:\n",
     "                num_successes += 1\n",
     "\n",
     "            dp.name = name\n",
@@ -274,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "68bced29",
    "metadata": {
     "scrolled": true
@@ -285,48 +290,40 @@
      "output_type": "stream",
      "text": [
       "K = 3, Success Rate = 97.5%\n",
-      "K = 4, Success Rate = 97.5%\n",
-      "K = 5, Success Rate = 94.9%\n",
-      "K = 6, Success Rate = 94.9%\n",
-      "K = 7, Success Rate = 92.4%\n",
-      "K = 8, Success Rate = 96.2%\n",
-      "K = 9, Success Rate = 97.5%\n",
-      "K = 10, Success Rate = 96.2%\n",
-      "K = 11, Success Rate = 97.5%\n",
-      "K = 12, Success Rate = 96.2%\n",
-      "K = 13, Success Rate = 96.2%\n",
-      "K = 14, Success Rate = 93.7%\n",
-      "K = 15, Success Rate = 94.9%\n",
-      "K = 16, Success Rate = 93.7%\n",
-      "K = 17, Success Rate = 91.1%\n",
-      "K = 18, Success Rate = 89.9%\n",
-      "K = 19, Success Rate = 84.8%\n",
-      "K = 20, Success Rate = 82.3%\n",
-      "Final K: 9\n",
-      "\n",
-      "Digit: 8\n",
-      "Digit: 9\n",
-      "Digit: 6\n",
-      "Digit: 7\n",
-      "Digit: 4\n",
-      "Digit: 3\n",
-      "Digit: 7\n",
-      "Digit: 2\n",
-      "Digit: 1\n",
-      "Digit: 0\n",
-      "Digit: 9\n",
-      "Digit: 0\n"
+      "K = 4, Success Rate = 98.0%\n",
+      "K = 5, Success Rate = 95.0%\n",
+      "K = 6, Success Rate = 95.0%\n",
+      "K = 7, Success Rate = 93.5%\n",
+      "K = 8, Success Rate = 94.5%\n",
+      "K = 9, Success Rate = 94.0%\n",
+      "K = 10, Success Rate = 94.0%\n",
+      "K = 11, Success Rate = 91.5%\n",
+      "K = 12, Success Rate = 92.0%\n",
+      "K = 13, Success Rate = 90.5%\n",
+      "K = 14, Success Rate = 89.5%\n",
+      "K = 15, Success Rate = 88.5%\n",
+      "K = 16, Success Rate = 88.5%\n",
+      "K = 17, Success Rate = 87.5%\n",
+      "K = 18, Success Rate = 87.5%\n",
+      "K = 19, Success Rate = 87.0%\n",
+      "K = 20, Success Rate = 87.5%\n",
+      "K = 4, Success Rate = 98.0%\n",
+      "Final K: 4\n",
+      "\n"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "<__main__.App at 0x1b15a69f370>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[17], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mApp\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[16], line 44\u001b[0m, in \u001b[0;36mApp.__init__\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[38;5;66;03m# Display the window.\u001b[39;00m\n\u001b[0;32m     43\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mwindow\u001b[38;5;241m.\u001b[39mfocus_force()\n\u001b[1;32m---> 44\u001b[0m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mwindow\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32mc:\\Users\\Adith\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py:1499\u001b[0m, in \u001b[0;36mMisc.mainloop\u001b[1;34m(self, n)\u001b[0m\n\u001b[0;32m   1497\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmainloop\u001b[39m(\u001b[38;5;28mself\u001b[39m, n\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m):\n\u001b[0;32m   1498\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Call the mainloop of Tk.\"\"\"\u001b[39;00m\n\u001b[1;32m-> 1499\u001b[0m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtk\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmainloop\u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
     }
    ],
    "source": [
@@ -337,6 +334,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "556a661a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39771966",
    "metadata": {},
    "outputs": [],
    "source": []
